--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -191,13 +191,16 @@ ul {
 }
 
 @media (max-width: 650px) {
-  .sidebar {
-    display: none;
+  .sidebar,
+.list {
+    display: none !important;
   }
   .header,
 .level_section,
-.menu-name_section {
-    margin-left: 20px !important;
+.menu-name_section,
+.table_pagination {
+    margin-left: 0px !important;
+    padding-left: 5px !important;
   }
 }
 body.model_active {
@@ -402,6 +405,12 @@ body.model_active {
   border: 1px solid #adb5bd;
   border-radius: 4px;
   padding: 8px 16px;
+}
+.level_section .main-body .form_modal form select {
+  border: 1px solid #adb5bd;
+  border-radius: 4px;
+  padding: 8px 16px;
+  outline: none;
 }
 .level_section .main-body .form_modal form textarea {
   resize: none;
