--- a/src/styles/level.scss
+++ b/src/styles/level.scss
@@ -3,6 +3,9 @@ body {
     overflow-y: hidden;
   }
 }
+.linkIcon{
+  cursor: pointer;
+}
 .level_section {
   margin-left: 257px;
   .section-name {
@@ -92,6 +95,66 @@ body {
         color: #343a40;
         &:last-child {
           text-align: right;
+        }
+        .switch {
+          position: relative;
+          display: inline-block;
+          width: 32px;
+          height: 16px;
+        }
+
+        .switch input {
+          opacity: 0;
+          width: 0;
+          height: 0;
+        }
+
+        .slider {
+          position: absolute;
+          cursor: pointer;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          background-color: #f8f9fa;
+          box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.04),
+            0px 1px 2px rgba(0, 0, 0, 0.08);
+          -webkit-transition: 0.4s;
+          transition: 0.4s;
+        }
+
+        .slider:before {
+          position: absolute;
+          content: "";
+          height: 16px;
+          width: 16px;
+          left: 0px;
+          bottom: 0px;
+          background-color: #adb5bd;
+          -webkit-transition: 0.4s;
+          transition: 0.4s;
+        }
+
+        input:checked + .slider {
+          background-color: #e3f2fd;
+        }
+        input:checked + .slider:before {
+          background-color: #1e88e5;
+        }
+
+        input:checked + .slider:before {
+          -webkit-transform: translateX(16px);
+          -ms-transform: translateX(16px);
+          transform: translateX(16px);
+        }
+
+        /* Rounded sliders */
+        .slider.round {
+          border-radius: 35px;
+        }
+
+        .slider.round:before {
+          border-radius: 50%;
         }
       }
     }
@@ -183,6 +246,7 @@ body {
       left: 50%;
       transform: translate(-50%, -50%) scale(0);
       background-color: $white;
+      width: 436px;
 
       &.active {
         transform: translate(-50%, -50%) scale(1);
@@ -198,6 +262,9 @@ body {
       }
       form {
         padding: 12px 24px 24px;
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
         .form_item {
           display: flex;
           flex-direction: column;
