--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -5,6 +5,7 @@
   color: $text_color;
   position: fixed;
   height: 100%;
+
   h1 {
     font-weight: 600;
     font-size: 14px;
@@ -163,15 +164,40 @@
 }
 
 @media (max-width: 650px) {
-  .sidebar,
+  .last {
+    form {
+      position: absolute;
+      right: 8.5rem;
+    }
+  }
   .list {
     display: none !important;
   }
-  .header,
+  .sidebar {
+    z-index: 5;
+    &.colapse {
+      margin-left: -100rem;
+    }
+  }
+  .menu_icon {
+    position: absolute;
+    right: 10rem;
+  }
+  .header {
+    margin-left: 0px !important;
+    padding-left: 20px !important;
+  }
   .level_section,
   .menu-name_section,
   .table_pagination {
     margin-left: 0px !important;
-    padding-left: 5px !important;
+    padding-left: -10px !important;
+  }
+  .table_pagination {
+    margin-left: 0px !important;
+    padding: 16px 10px !important;
+    .row-end {
+      margin-left: 20px;
+    }
   }
 }
